Minor layout and CSS tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,13 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap-3
-tagline: Site Tagline
+title : Objects in Heapspace
+tagline: Wherein I am wrong about things
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Edwin Sheldon
+  email : edwin.sheldon@gmail.com
+  github : eas604
+  twitter : ed_win_s
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
@@ -28,7 +27,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://eas604.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -83,7 +82,8 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : false
+    #disqus
     disqus :
       short_name : jekyllbootstrap
     livefyre :
